--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
   top: 0;
   bottom: 0;
   z-index: 1;
-  background-color: #0003;
-  backdrop-filter: blur(14px) saturate(3);
+  background-color: #0001;
+  backdrop-filter: blur(15px) saturate(3) brightness(.5);
   max-width: 85vw;
   overflow-x: scroll;
   transition: transform 0.3s ease-in-out;
