--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(./node_modules/maplibre-gl/dist/maplibre-gl.css);
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #000;
